--- a/gb/23/11/20/n14120260.md
+++ b/gb/23/11/20/n14120260.md
@@ -1,54 +1,53 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>华运会举办感恩餐会 永续传承华运精神</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/11/id14120266-56a636b983fb0bdd4f9705303e6cd481-600x400.jpeg" />
 <h6>2023年11月18日华运会举办感恩餐会，众人在台上欢歌热舞。（薛明珠/大纪元）
 </h6>
 <hr>
-	<p>【大纪元2023年11月20日讯】（大纪元记者薛明珠苗必达采访报导）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%87%91%E5%B1%B1%E6%B9%BE%E5%8C%BA.md#1">金山湾区</a>华人运动大会于11月18日（上周六）晚，在南湾侨教中心，举办感恩餐会。感谢一年以来，不辞辛劳、无私付出的侨界志工、提供赞助的侨胞，以及组织机构。</p>
-<p>当晚，驻旧金山经济文化办事处处长<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B5%96%E9%93%AD%E7%90%AA.md#1">赖铭琪</a>、前办事处处长马钟麟、南湾华侨文教中心主任庄雅淑、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8D%8E%E8%BF%90%E4%BC%9A.md#1">华运会</a>主委王进德、侨务委员吕玉贞、李汉文、学区委员寇惠风，以及侨界各组织机构的领袖，还有众志工，共300多人出席了感恩餐会。</p>
-<figure id="attachment_14120267" aria-describedby="caption-attachment-14120267" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14120267-65f11a7174596530e989ddf28e11bd3b.jpeg"><img class="size-large wp-image-14120267" src="https://i.epochtimes.com/assets/uploads/2023/11/id14120267-65f11a7174596530e989ddf28e11bd3b-600x450.jpeg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14120267" class="wp-caption-text">2023年11月18日，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B5%96%E9%93%AD%E7%90%AA.md#1">赖铭琪</a>处长在感恩餐会上发言。（薛明珠/大纪元）</figcaption></figure>
+	<p>【大纪元2023年11月20日讯】（大纪元记者薛明珠苗必达采访报导）金山湾区华人运动大会于11月18日（上周六）晚，在南湾侨教中心，举办感恩餐会。感谢一年以来，不辞辛劳、无私付出的侨界志工、提供赞助的侨胞，以及组织机构。</p>
+<p>当晚，驻旧金山经济文化办事处处长赖铭琪、前办事处处长马钟麟、南湾华侨文教中心主任庄雅淑、华运会主委王进德、侨务委员吕玉贞、李汉文、学区委员寇惠风，以及侨界各组织机构的领袖，还有众志工，共300多人出席了感恩餐会。</p>
+<figure id="attachment_14120267" aria-describedby="caption-attachment-14120267" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14120267-65f11a7174596530e989ddf28e11bd3b.jpeg"><img decoding="async" class="size-large wp-image-14120267" src="https://i.epochtimes.com/assets/uploads/2023/11/id14120267-65f11a7174596530e989ddf28e11bd3b-600x450.jpeg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14120267" class="wp-caption-text">2023年11月18日，赖铭琪处长在感恩餐会上发言。（薛明珠/大纪元）</figcaption></figure>
 <p>餐会以热闹的歌舞开场，吕玉贞、林秀春一同上台高唱台语歌曲《等一下呢! 》，陈宗义一曲《姐姐妺妺站起来》更使全场气氛高涨，台上台下齐呼应。</p>
 <p>另外，还有风中之羽表演的舞蹈《神奇的朋友》，加州排舞协会的“So Crazy”，以及FASCA的扯铃和杂耍等等。会上众人欢歌热舞，尽情放松。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8D%8E%E8%BF%90%E4%BC%9A.md#1">华运会</a>主委王进德表示，今天是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%87%91%E5%B1%B1%E6%B9%BE%E5%8C%BA.md#1">金山湾区</a>华人运动大会<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%AC%AC39%E5%B1%8A.md#1">第39届</a>感恩餐会，感谢所有的支持者。</p>
+<p>华运会主委王进德表示，今天是金山湾区华人运动大会第39届感恩餐会，感谢所有的支持者。</p>
 <p>今年华运会举办了30多项活动，尤其是今年7月份举办的华运会分列式，是迄今为止最盛大的开幕式，有100多个团体数千人参加。</p>
-<figure id="attachment_14120268" aria-describedby="caption-attachment-14120268" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14120268-e693fcbbab3caec5acab5a85c1b1e491.jpeg"><img class="size-large wp-image-14120268" src="https://i.epochtimes.com/assets/uploads/2023/11/id14120268-e693fcbbab3caec5acab5a85c1b1e491-600x450.jpeg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14120268" class="wp-caption-text">2023年11月18日华运会感恩餐会。（薛明珠/大纪元）</figcaption></figure>
+<figure id="attachment_14120268" aria-describedby="caption-attachment-14120268" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14120268-e693fcbbab3caec5acab5a85c1b1e491.jpeg"><img decoding="async" class="size-large wp-image-14120268" src="https://i.epochtimes.com/assets/uploads/2023/11/id14120268-e693fcbbab3caec5acab5a85c1b1e491-600x450.jpeg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14120268" class="wp-caption-text">2023年11月18日华运会感恩餐会。（薛明珠/大纪元）</figcaption></figure>
 <p>所有的活动，都依靠侨胞们的支持和付出，今天要特别感谢各位志工，希望侨胞们继续支持华运会。</p>
 <p>赖铭琪表示，他代表中华民国政府感谢华运会凝聚侨心，在过去三年里，他参加了华运会的垒球、高尔夫球、保龄球、篮球、竞走，以及射击等比赛项目；明年他要参加更多比赛项目，支持华运会。</p>
 <p>庄雅淑表示，华运会是非常重要的活动，今年华运会的开幕式，有上百个队伍，吸引了上万人次的参与；侨务委员长对此表示十分惊讶、感动；希望华运会精神永续传承。◇</p>
 <p>责任编辑：宋佳怡</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/28/n13610396.md#1">金山湾区华运会主委交接 王进德接棒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/11/n13778121.md#1">华运会点圣火 侨委会委员长童振源出席</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952174.md#1">金山湾区华人运动会 举办第一次筹备会议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973350.md#1">海华玉山友谊杯垒球赛 进入第三十三年</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/2/28/n13610396.md#1">金山湾区华运会主委交接 王进德接棒</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/11/n13778121.md#1">华运会点圣火 侨委会委员长童振源出席</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/17/n13952174.md#1">金山湾区华人运动会 举办第一次筹备会议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/15/n13973350.md#1">海华玉山友谊杯垒球赛 进入第三十三年</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/22/n11814019.md#1" target="_blank">夏林：中共是国民党大选惨败的根本原因</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/9/27/n10746220.md#1" target="_blank">觅真：真诚的感恩浸透着民心所向</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/27/n10936495.md#1" target="_blank">林辉：抗日名将殉国身后妻儿惨到乞讨</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/30/n11489139.md#1" target="_blank">组图一：法轮功学员欧洲盛大游行 震撼世人</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/12/n14115070.md#1">印尼巴东山发现至今最古老金字塔</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/12/n14114677.md#1">乐高乐园：创意无限的奇妙之旅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/13/n14115416.md#1">霸王别姬后 虞姬再见项羽 另外时空解谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/16/n14117971.md#1">民众目睹：墨西哥一尊圣母像流泪 眼睛变红</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/13/n14115619.md#1">刘伯温《救劫碑文》预言大劫 怎样关过天番龙蛇年？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118740.md#1">【晚间新闻】APEC峰会期间 法轮功要求中共停止迫害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/18/n14118974.md#1">【时事金扫描】乌军战略大突破 打乱俄冬季战略</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118385.md#1">【环球直击】中国房地产危机蔓延 河北工人上街</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/18/n14119333.md#1">美军将启用“复制者”计划 瓦解中共人海战术</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/18/n14119121.md#1">去世三周 李克强学籍曝光 北大被指暗流涌动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/18/n14119054.md#1">知情人：中共雇妓女去旧金山“欢迎”党魁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118795.md#1">周星驰开拍《少林女足》 莫文蔚想演魔鬼教练</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118840.md#1">闪婚105天 日本花滑名将羽生结弦宣布离婚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118862.md#1">谢娜在林心如面前聊林志颖 对话笑爆网络</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118625.md#1">玛丽亚凯莉推个人芭比娃娃、圣诞巡回演唱会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/18/n14119248.md#1">《再次成为神》影评：铲除红色恶龙 天下方能太平</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117256.md#1">糖为何会导致精神疾病</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118460.md#1">电视机应该如何清理才不会受损？ 专家释疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">11/19日亚马逊精选</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/18/n14118984.md#1">【车评】娇小而实用 2023 Toyota Corolla Cross Hybrid XSE</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/19/n14119590.md#1">世界上最少人造访的国家 每年仅200名游客</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284473.md#1">老僧预言他将大祸临头 权倾天下的他将如何选择？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286164.md#1">【未解之谜】最可信的穿越者 他在历史中留下了证据</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289654.md#1">【音乐】五月的希望</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285490.md#1">故宫耐震神技夸世 建筑秘诀藏在何处？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289728.md#1">【未解之谜】“目睹”三次文明毁灭 濒死中看到未来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290106.md#1">【时事军事】共军真要去欧洲打仗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289717.md#1">衡阳保卫战电影被禁 分析：中共抹杀历史</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289299.md#1">中国6月进出口数据现警讯 贸易冲突或加剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289679.md#1">2024年美国生活最昂贵和最便宜的十个州</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290122.md#1">演唱会中途不停要喝水 刘德华身体状况引担忧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288874.md#1">胡歌首谈夫妻相处模式 大赞老婆付出很多</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289693.md#1">力压张若昀和胡歌 朱一龙获陆剧小生演技冠军</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290096.md#1">油管史上第一人 网红MrBeast频道订阅数破3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289755.md#1">张艺兴演唱会上为母亲庆生 一口误引全场笑声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290376.md#1">美国癌症协会：4成癌症病例与生活习惯有关</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287768.md#1">物价上涨如何省钱？养成19个购物习惯超实用</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285229.md#1">研究：咖啡有助于抵消与年龄有关的肌肉流失</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281710.md#1">吸食大麻健康危害大 七招让你远离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289225.md#1">观赏奥运要小心 看错比赛肚子恐怕会胖一圈</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/11/20/n14120260.htm">华运会举办感恩餐会 永续传承华运精神</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/11/20/n14120260.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/11/20/n14120260.htm">华运会举办感恩餐会 永续传承华运精神</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/11/20/n14120260.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
